Corrige el formato del título en Lab 3 y Lab 4 para mantener la consistencia en la presentación.

--- a/src/content/docs/labs/lab3.mdx
+++ b/src/content/docs/labs/lab3.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Lab 3: Snake Game with FreeRTOS"
+title: "Lab 3: RTOS Snake Game Part 1"
 description: "Build a complete Snake game using FreeRTOS on the TM4C1294XL LaunchPad. Learn modular task design, mutex synchronization, and queue-based communication."
 links:
 - /labs/lab2/
